alpm-types/src/snapshots/name::name_parse_error@case_1.snap
---
source: alpm-types/src/name.rs
---
error: invalid character in package name
 | 
 | package_name_'''
 |              ^ expected ASCII alphanumeric character
 | 
 = while parsing:
   alpm-package-name: (''')
   → invalid character in package name
   → expected ASCII alphanumeric character, `_`, `@`, `+`, `-`, `.`
